More ticket fixes, alignment on manage accounts

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -11,6 +11,7 @@ html {
 
   --focus-rgb: 82, 168, 236;
   --error-rgb: 255, 99, 71;
+  --success-rgb: 102, 186, 104;
 
   --selection-light-rgb: 240, 240, 240;
   --selection-dark-rgb: 180, 180, 180;
